avoid image stretching

--- a/src/_assets/css/_dash.scss
+++ b/src/_assets/css/_dash.scss
@@ -208,7 +208,9 @@ $dash-dartpad-border: #293542;
 
   .content-image {
     display: flex;
-    
+    flex-direction: column;
+    justify-content: center;
+
     background-color: $dark-darker-black;
     padding: 0 !important;
 
